hphp/test/zend/good/Zend/tests/errmsg_009.php.expectf

Fatal error: Multiple access type modifiers are not allowed: properties of test in %s/errmsg_009.php on line 4
